<resources>
    <string name="app_name">LessonsControl</string>
    <string name="action_settings">Settings</string>

    <!-- Student -->
    <string name="name">Name</string>
    <string name="mail">E-mail</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="student_info">Student info</string>

    <!-- Lesson -->
    <string name="type">Type</string>
    <string name="days">Schedule</string>
    <string name="next_class">Next class</string>
    <string name="next_payment">Next payment</string>
    <string name="price">Price per lesson</string>
    <string name="lessons">Lessons</string>
    <string name="SUN">Sunday</string>
    <string name="MON">Monday</string>
    <string name="TUE">Tuesday</string>
    <string name="WED">Wednesday</string>
    <string name="THU">Thursday</string>
    <string name="FRI">Friday</string>
    <string name="SAT">Saturday</string>
    <string name="lesson_info">Lesson info</string>
    <string name="student_lessons">Student Lessons</string>
    <string name="no_date_selected">No date selected.</string>
    <string name="no_date_selected_lowercase">no date selected.</string>
    <string name="delete_student">Delete student?</string>
    <string name="delete_lesson">Delete lesson?</string>
    <string name="label_no_students">Press the button to add students.</string>
    <string name="text_title_left" translatable="false">Lessons</string>
    <string name="text_title_right" translatable="false">Control</string>
    <string name="required_fields_empty">One or more required fields are empty.</string>
    <string name="required_field">Required field</string>
    <string name="date_must_not_be_in_the_past">Date must not be in the past.</string>

</resources>
