<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Name -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"

                android:theme="@style/TextLabel" />
        </android.support.design.widget.TextInputLayout>

        <!-- Mail -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <EditText
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mail"

                android:theme="@style/TextLabel" />
        </android.support.design.widget.TextInputLayout>

        <!-- Address -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"

                android:theme="@style/TextLabel" />
        </android.support.design.widget.TextInputLayout>

        <!-- Phone -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <EditText
                android:id="@+id/phone"
                android:inputType="phone"
                android:digits="0123456789+"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"

                android:theme="@style/TextLabel" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>