<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:animateLayoutChanges="true">

        <!-- Activity components: <LABEL> <FIELD> <SEPARATOR> -->
        <!-- The separator is a View tag with 1dp height -->

        <!-- ============== Type ============== -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/InfoLabel"
            android:text="@string/type"
            android:layout_marginTop="16dp"
            android:paddingLeft="10dp"
            android:paddingRight="8dp"/>

        <TextView
            android:id="@+id/view_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Info"
            android:paddingLeft="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="16dp"
            android:background="@color/light_gray" />

        <!-- ============== Next class ============== -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/InfoLabel"
            android:text="@string/next_class"
            android:paddingTop="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="8dp"/>

        <TextView
            android:id="@+id/view_next_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Info"
            android:paddingLeft="10dp"
            android:layout_marginBottom="16dp"/>

        <View
            android:id="@+id/view_next_class_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/light_gray" />

        <!-- ============== Days ============== -->
        <TextView
            android:id="@+id/view_days_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/InfoLabel"
            android:text="@string/days"
            android:paddingTop="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="8dp"/>

        <TextView
            android:id="@+id/view_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Info"
            android:paddingLeft="10dp"/>

        <View
            android:id="@+id/view_days_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="16dp"
            android:background="@color/light_gray" />

        <!-- ============== Next payment ============== -->
        <TextView
            android:id="@+id/view_next_payment_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/InfoLabel"
            android:text="@string/next_payment"
            android:paddingTop="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="8dp"/>

        <TextView
            android:id="@+id/view_next_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Info"
            android:paddingLeft="10dp"/>

        <View
            android:id="@+id/view_next_payment_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="16dp"
            android:background="@color/light_gray" />

        <!-- ============== Price ============== -->
        <TextView
            android:id="@+id/view_price_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/InfoLabel"
            android:text="@string/price"
            android:paddingTop="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="8dp"/>

        <TextView
            android:id="@+id/view_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Info"
            android:paddingLeft="10dp"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>
</android.support.v7.widget.CardView>